[package]
name = "rustynode"
version = "0.0.1"
authors = ["Sankha Narayan Guria <sankha93@gmail.com>"]

[dependencies.js]
git = "https://github.com/servo/rust-mozjs"

[dependencies.eventual]
git = "https://github.com/carllerche/eventual"

[dependencies.syncbox]
git = "https://github.com/carllerche/syncbox"

[dependencies]
libc = "0.1"
rustc-serialize = "0.3"
